--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,7 @@ portable-source:
         expire_in: 1 week
         paths:
             - Packages/*/*/*/*/*/*.zip
+            - Packages/*/*/*/*/*/*.tar.gz
             - Metadata/*/*/*/configure.log
         reports:
             metrics: metrics.txt
