--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -8,7 +8,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/lib
 noinst_HEADERS = sfhdr.h sfio.h sfio_t.h vthread.h
 noinst_LTLIBRARIES = libsfio_C.la
 
-libsfio_C_la_SOURCES = sfclose.c sfclrlock.c sfcvt.c sfdisc.c \
+libsfio_C_la_SOURCES = sfclose.c sfcvt.c sfdisc.c \
 	sfexcept.c sfexit.c sfextern.c sffilbuf.c \
 	sfflsbuf.c sfgetd.c sfgetl.c sfgetm.c sfgetr.c sfgetu.c \
 	sfmode.c sfnew.c sfnotify.c \
