remove unused sfreserve()

--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -14,7 +14,7 @@ libsfio_C_la_SOURCES = sfclose.c sfcvt.c sfdisc.c \
 	sfmode.c sfnew.c sfnotify.c \
 	sfnputc.c sfopen.c sfpkrd.c sfpoll.c sfpool.c \
 	sfprintf.c sfprints.c sfpurge.c \
-	sfputr.c sfraise.c sfrd.c sfread.c sfreserve.c \
+	sfputr.c sfraise.c sfrd.c sfread.c \
 	sfresize.c sfscanf.c sfseek.c sfset.c sfsetbuf.c sfsetfd.c \
 	sfsize.c sfsk.c sfstack.c sfstrtod.c sfswap.c sfsync.c \
 	sftable.c sftell.c sftmp.c sfungetc.c sfvprintf.c \
