--- a/lib/spine/Makefile.am
+++ b/lib/spine/Makefile.am
@@ -1,9 +1,6 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-#pdfdir = $(pkgdatadir)/doc/pdf
-#pkgconfigdir = $(libdir)/pkgconfig
-
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/cgraph \
@@ -14,7 +11,4 @@ noinst_LTLIBRARIES = libspine_C.la
 
 libspine_C_la_SOURCES = quad.c spine.c subset.c union_find.c
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA)
-
-DISTCLEANFILES = $(pdf_DATA)
-
+EXTRA_DIST = $(man_MANS)
