--- a/cmd/edgepaint/Makefile.am
+++ b/cmd/edgepaint/Makefile.am
@@ -12,12 +12,16 @@ AM_CPPFLAGS = \
 bin_PROGRAMS = edgepaint
 
 man_MANS = edgepaint.1
+if ENABLE_MAN_PDFS
 pdf_DATA = edgepaint.1.pdf
 
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 edgepaint_SOURCES = edgepaintmain.c
@@ -39,6 +43,7 @@ edgepaint_LDADD = \
 # linking, so the C++ standard library is included for our C++ dependencies
 nodist_EXTRA_edgepaint_SOURCES = fake.cxx
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 edgepaint.1.pdf: edgepaint.1.ps
 	@PS2PDF@ $<
@@ -46,7 +51,8 @@ edgepaint.1.pdf: edgepaint.1.ps
 edgepaint.1.ps: $(srcdir)/edgepaint.1
 	@GROFF@ -e -Tps -man -t $< >$@
 endif
+endif
 
 EXTRA_DIST = $(man_MANS) $(pdf) edgepaint.vcxproj*
 
-DISTCLEANFILES = $(pdf_DATA) edgepaint.1.ps
+DISTCLEANFILES = $(pdf) edgepaint.1.ps
