--- a/cmd/lneato/Makefile.am
+++ b/cmd/lneato/Makefile.am
@@ -12,12 +12,16 @@ endif
 endif
 
 man_MANS = lneato.1
+if ENABLE_MAN_PDFS
 pdf_DATA = lneato.1.pdf
 
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 AM_CFLAGS = -DLNEATO
@@ -30,6 +34,7 @@ lneato: ${top_srcdir}/cmd/lneato/lneato.sh
 	chmod +x lneato
 endif
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 lneato.1.pdf: lneato.1.ps
 	@PS2PDF@ $<
@@ -37,8 +42,9 @@ lneato.1.pdf: lneato.1.ps
 lneato.1.ps: $(srcdir)/lneato.1
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 EXTRA_DIST = $(man_MANS) $(pdf) lneato.bsh lneato.ksh lneato.sh \
 	mswin32 lneato.vcxproj*
 
-DISTCLEANFILES = lneato $(pdf_DATA) lneato.1.ps
+DISTCLEANFILES = lneato $(pdf) lneato.1.ps
