--- a/lib/cdt/Makefile.am
+++ b/lib/cdt/Makefile.am
@@ -14,13 +14,19 @@ noinst_HEADERS = dthdr.h
 noinst_LTLIBRARIES = libcdt_C.la
 lib_LTLIBRARIES = libcdt.la
 man_MANS = cdt.3
+if ENABLE_MAN_PDFS
 pdf_DATA = cdt.3.pdf
+endif
 pkgconfig_DATA = libcdt.pc
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 libcdt_C_la_SOURCES = dtclose.c dtdisc.c dtextract.c dtflatten.c \
@@ -30,6 +36,7 @@ libcdt_C_la_SOURCES = dtclose.c dtdisc.c dtextract.c dtflatten.c \
 libcdt_la_LDFLAGS = -version-info $(CDT_VERSION) -no-undefined
 libcdt_la_SOURCES = $(libcdt_C_la_SOURCES)
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 cdt.3.pdf: cdt.3.ps
 	@PS2PDF@ $<
@@ -37,7 +44,8 @@ cdt.3.pdf: cdt.3.ps
 cdt.3.ps: $(srcdir)/cdt.3
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 EXTRA_DIST = $(man_MANS) $(pdf) cdt.vcxproj*
 
-DISTCLEANFILES = $(pdf_DATA) cdt.3.ps
+DISTCLEANFILES = $(pdf) cdt.3.ps
