--- a/lib/gvpr/Makefile.am
+++ b/lib/gvpr/Makefile.am
@@ -20,12 +20,18 @@ noinst_LTLIBRARIES = libgvpr_C.la
 lib_LTLIBRARIES = libgvpr.la
 pkgconfig_DATA = libgvpr.pc
 man_MANS = gvpr.3
+if ENABLE_MAN_PDFS
 pdf_DATA = gvpr.3.pdf
+endif
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 libgvpr_C_la_SOURCES = actions.c compile.c gvpr.c gprstate.c parse.c queue.c 
@@ -35,12 +41,14 @@ libgvpr_C_la_DEPENDENCIES = \
 	$(top_builddir)/lib/common/libcommon_C.la \
 	$(top_builddir)/lib/ingraphs/libingraphs_C.la
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 gvpr.3.pdf: gvpr.3.ps
 	@PS2PDF@ $<
 
 gvpr.3.ps: $(srcdir)/gvpr.3
 	@GROFF@ -Tps -man $< >$@
+endif
 endif
 
 libgvpr_la_LDFLAGS = -version-info $(GVPR_VERSION) -no-undefined
@@ -65,4 +73,4 @@ gdefs.h: $(top_srcdir)/lib/gvpr/gprdata mkdefs$(EXEEXT)
 
 EXTRA_DIST = $(man_MANS) $(pdf) gprdata mkdefs.c gdefs.h trie.c gvprlib.vcxproj*
 
-DISTCLEANFILES = $(pdf_DATA) gdefs.h mkdefs$(EXEEXT) gvpr.3.ps
+DISTCLEANFILES = $(pdf) gdefs.h mkdefs$(EXEEXT) gvpr.3.ps
