--- a/lib/inkpot/Makefile.am
+++ b/lib/inkpot/Makefile.am
@@ -19,12 +19,16 @@ noinst_HEADERS = inkpot_scheme.h inkpot_xlate.h inkpot_value.h \
 noinst_LTLIBRARIES = libinkpot_C.la
 
 man_MANS = inkpot.3 inkpot.1
+if ENABLE_MAN_PDFS
 pdf_DATA = inkpot.3.pdf inkpot.1.pdf
 
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 inkpot_SOURCES = inkpot.c
@@ -75,6 +79,7 @@ $(top_builddir)/lib/inkpot/inkpot_lib_tk.dat: inkpot_lib_tk.tcl data/xcolors.c
 $(top_builddir)/lib/inkpot/inkpot_lib_brewer.dat: inkpot_lib_brewer.tcl data/brewer_colors
 	$(TCLSH) inkpot_lib_brewer.tcl data/brewer_colors
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 inkpot.1.pdf: inkpot.1.ps
 	@PS2PDF@ $<
@@ -88,12 +93,13 @@ inkpot.3.pdf: inkpot.3.ps
 inkpot.3.ps: inkpot.3
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 CLEANFILES = inkpot_lib_*.dat
 
 EXTRA_DIST = $(man_MANS) $(pdf) *.tcl data/* \
 	inkpot_lib_define.h inkpot_lib_value.h inkpot_lib_scheme.h inkpot_lib_string.h
 
-DISTCLEANFILES = $(pdf_DATA) \
+DISTCLEANFILES = $(pdf) \
 	inkpot_lib_define.h inkpot_lib_value.h inkpot_lib_scheme.h inkpot_lib_string.h \
 	inkpot.1.ps inkpot.3.ps
