--- a/lib/pack/Makefile.am
+++ b/lib/pack/Makefile.am
@@ -19,17 +19,21 @@ endif
 pkginclude_HEADERS = pack.h
 noinst_LTLIBRARIES = libpack_C.la
 man_MANS = pack.3
+if ENABLE_MAN_PDFS
 pdf_DATA = pack.3.pdf
-#pkgconfig_DATA = libpack.pc
 
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
 endif
+else
+pdf =
+endif
 
 libpack_C_la_SOURCES = ccomps.c pack.c
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 pack.3.pdf: pack.3.ps
 	@PS2PDF@ $<
@@ -37,8 +41,9 @@ pack.3.pdf: pack.3.ps
 pack.3.ps: $(srcdir)/pack.3
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 EXTRA_DIST = $(man_MANS) $(pdf) ptest.c
 
-DISTCLEANFILES = $(pdf_DATA) pack.3.ps
+DISTCLEANFILES = $(pdf) pack.3.ps
 
