--- a/lib/xdot/Makefile.am
+++ b/lib/xdot/Makefile.am
@@ -15,6 +15,7 @@ lib_LTLIBRARIES = libxdot.la
 pkgconfig_DATA = libxdot.pc
 
 man_MANS = xdot.3
+if ENABLE_MAN_PDFS
 pdf_DATA = xdot.3.pdf
 
 if HAVE_PS2PDF
@@ -22,11 +23,15 @@ pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
 endif
+else
+pdf =
+endif
 
 libxdot_C_la_SOURCES = xdot.c
 libxdot_la_LDFLAGS = -version-info $(XDOT_VERSION) -no-undefined
 libxdot_la_SOURCES = $(libxdot_C_la_SOURCES)
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 xdot.3.pdf: xdot.3.ps
 	@PS2PDF@ $<
@@ -34,8 +39,9 @@ xdot.3.pdf: xdot.3.ps
 xdot.3.ps: $(srcdir)/xdot.3
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 EXTRA_DIST = $(man_MANS) $(pdf) xdot.vcxproj*
 
-DISTCLEANFILES = $(pdf_DATA) xdot.3.ps
+DISTCLEANFILES = $(pdf) xdot.3.ps
 
