--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -7,17 +7,23 @@ pdfdir = $(pkgdatadir)/doc/pdf
 gveditdir = $(pkgdatadir)/gvedit
 
 mans = gvedit.1
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 pdfs = gvedit.1.pdf
 else
 pdfs = ERROR_NO_PS2PDF
+endif
+else
+pdfs =
 endif
 
 if WITH_QT
 bin_PROGRAMS = gvedit
 gvedit_DATA = attrs.txt
 man_MANS = $(mans)
+if ENABLE_MAN_PDFS
 pdf_DATA = gvedit.1.pdf
+endif
 endif
 
 AM_CPPFLAGS = \
@@ -61,6 +67,7 @@ qMakefile: gvedit.pro
 attrs.txt: $(top_srcdir)/doc/infosrc/attrs
 	cp $(top_srcdir)/doc/infosrc/attrs attrs.txt
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 gvedit.1.pdf: gvedit.1.ps
 	@PS2PDF@ $<
@@ -68,12 +75,13 @@ gvedit.1.pdf: gvedit.1.ps
 gvedit.1.ps: $(srcdir)/gvedit.1
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 EXTRA_DIST = gvedit.vcxproj* gvedit.pro.in mdi.qrc $(mans) $(pdfs)
 
 CLEANFILES = moc_csettings.cpp moc_imageviewer.cpp moc_mainwindow.cpp moc_mdichild.cpp qrc_mdi.cpp
 
-DISTCLEANFILES = attrs.txt $(pdf_DATA) qMakefile gvedit.1.ps
+DISTCLEANFILES = attrs.txt $(pdf) qMakefile gvedit.1.ps
 
 clean-local:
 	-$(MAKE) -f qMakefile clean
