--- a/lib/cgraph/Makefile.am
+++ b/lib/cgraph/Makefile.am
@@ -14,12 +14,18 @@ noinst_LTLIBRARIES = libcgraph_C.la
 lib_LTLIBRARIES = libcgraph.la
 pkgconfig_DATA = libcgraph.pc
 man_MANS = cgraph.3
+if ENABLE_MAN_PDFS
 pdf_DATA = cgraph.3.pdf
+endif
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 libcgraph_C_la_SOURCES = agerror.c agxbuf.c apply.c attr.c edge.c \
@@ -38,6 +44,7 @@ scan.c: $(top_srcdir)/lib/cgraph/scan.l
 grammar.c grammar.h: $(top_srcdir)/lib/cgraph/grammar.y
 	@YACC@ -Wno-yacc -dv --output=grammar.c $(top_srcdir)/lib/cgraph/grammar.y
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 cgraph.3.pdf: cgraph.3.ps
 	@PS2PDF@ $<
@@ -45,9 +52,10 @@ cgraph.3.pdf: cgraph.3.ps
 cgraph.3.ps: $(srcdir)/cgraph.3
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 EXTRA_DIST = $(man_MANS) $(pdf) cmpnd.c \
 	grammar.c grammar.h scan.c \
 	cgraph.vcxproj*
 
-DISTCLEANFILES = $(pdf_DATA) grammar.[ch] scan.c cgraph.3.ps
+DISTCLEANFILES = $(pdf) grammar.[ch] scan.c cgraph.3.ps
