--- a/lib/pathplan/Makefile.am
+++ b/lib/pathplan/Makefile.am
@@ -19,12 +19,16 @@ noinst_LTLIBRARIES = libpathplan_C.la
 lib_LTLIBRARIES = libpathplan.la
 pkgconfig_DATA = libpathplan.pc
 man_MANS = pathplan.3
+if ENABLE_MAN_PDFS
 pdf_DATA = pathplan.3.pdf
 
 if HAVE_PS2PDF
 pdf = $(pdf_DATA)
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 libpathplan_C_la_SOURCES = cvt.c inpoly.c route.c shortest.c \
@@ -34,6 +38,7 @@ libpathplan_la_LDFLAGS = -version-info $(PATHPLAN_VERSION) -no-undefined
 libpathplan_la_SOURCES = $(libpathplan_C_la_SOURCES)
 libpathplan_la_LIBADD = @MATH_LIBS@
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 pathplan.3.pdf: pathplan.3.ps
 	@PS2PDF@ $<
@@ -41,7 +46,8 @@ pathplan.3.pdf: pathplan.3.ps
 pathplan.3.ps: $(srcdir)/pathplan.3
 	@GROFF@ -Tps -man $< >$@
 endif
+endif
 
 EXTRA_DIST = $(man_MANS) $(pdf) path.lefty Pathplan.vcxproj* pathplan.def
 
-DISTCLEANFILES = $(pdf_DATA) pathplan.3.ps
+DISTCLEANFILES = $(pdf) pathplan.3.ps
