--- a/tclpkg/tkspline/Makefile.am
+++ b/tclpkg/tkspline/Makefile.am
@@ -7,10 +7,14 @@ pkgtcldir = $(pkglibdir)/tcl
 pdfdir = $(pkgdatadir)/doc/pdf
 
 man = tkspline.3tk
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 pdf = tkspline.3tk.pdf
 else
 pdf = ERROR_NO_PS2PDF
+endif
+else
+pdf =
 endif
 
 # If all else fails there is a local copy of tkInt.h in tkstubs/
@@ -27,7 +31,9 @@ AM_CFLAGS = @X_CFLAGS@ @TCL_CFLAGS@  @TK_CFLAGS@ @TK_DEFS@ \
 if WITH_TK
 pkgtcl_LTLIBRARIES = libtkspline.la
 man_MANS = $(man)
+if ENABLE_MAN_PDFS
 pdf_DATA = tkspline.3tk.pdf
+endif
 endif
 
 libtkspline_la_LDFLAGS = -no-undefined 
@@ -43,12 +49,14 @@ pkgIndex.tcl: libtkspline.la
 	sh $(top_srcdir)/tclpkg/mkpkgindex.sh libtkspline.la Tkspline $(VERSION)
 endif
 
+if ENABLE_MAN_PDFS
 if HAVE_PS2PDF
 tkspline.3tk.pdf: tkspline.3tk.ps
 	@PS2PDF@ $<
 
 tkspline.3tk.ps: $(srcdir)/tkspline.3tk
 	@GROFF@ -Tps -man $< >$@
+endif
 endif
 
 EXTRA_DIST = $(man) $(pdf) dllEntry.c
