force man page PDF generation in CI portable source build
This forces the CI portable source build to fail if it cannot find a way to
generate PDF versions of man pages.

Related to #1763.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ portable-source:
     image: "graphviz/graphviz:ubuntu-18.04"
     script:
         - ./autogen.sh
-        - ./configure
+        - ./configure --enable-man-pdfs
         - make dist
     artifacts:
         when: on_success
